Finished Bailey Menoeceus

--- a/Letter_to_Menoeceus_Bailey_Bilingual (master).html
+++ b/Letter_to_Menoeceus_Bailey_Bilingual (master).html
@@ -378,10 +378,186 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [129]
+        [129] ταύτην γὰρ ἀγαθὸν πρῶτον καὶ συγγενικὸν ἔγνωμεν, καὶ ἀπὸ ταύτης καταρχόμεθα πάσης αἱρέσεως καὶ φυγῆς καὶ ἐπὶ ταύτην καταντῶμεν ὡς κανόνι τῷ πάθει πᾶν ἀγαθὸν κρίνοντες.
     </td>
     <td> 
-        [129]
+        [129] For we recognize pleasure as the first good innate in us, and from pleasure we begin every act of choice and avoidance, and to pleasure we return again, using the feeling as the standard by which we judge every good.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ ἐπεὶ πρῶτον ἀγαθὸν τοῦτο καὶ σύμφυτον, διὰ τοῦτο καὶ οὐ πᾶσαν ἡδονὴν αἱρούμεθα, ἀλλ᾽ ἔστιν ὅτε πολλὰς ἡδονὰς ὑπερβαίνομεν, ὅταν πλεῖον ἡμῖν τὸ δυσχερὲς ἐκ τούτων ἕπηται·
+    </td>
+    <td> 
+        And since pleasure is the first good and natural to us, for this very reason we do not choose every pleasure, but sometimes we pass over many pleasures, when greater discomfort accrues to us as the result of them:
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ πολλὰς ἀλγηδόνας ἡδονῶν κρείττους νομίζομεν, ἐπειδὰν μείζων ἡμῖν ἡδονὴ παρακολουθῇ πολὺν χρόνον ὑπομείνασι τὰς ἀλγηδόνας.
+    </td>
+    <td> 
+        and similarly we think many pains better than pleasures, since a greater pleasure comes to us when we have endured pains for a long time.
+    </td>
+</tr>
+<tr>
+    <td>
+        πᾶσα οὖν ἡδονὴ διὰ τὸ φύσιν ἔχειν οἰκείαν ἀγαθόν, οὐ πᾶσα μέντοι αἱρετή·
+    </td>
+    <td> 
+        Every pleasure then because of its natural kinship to us is good, yet not every pleasure is to be chosen:
+    </td>
+</tr>
+<tr>
+    <td>
+        καθάπερ καὶ ἀλγηδὼν πᾶσα κακόν, οὐ πᾶσα δὲ ἀεὶ φευκτὴ πεφυκυῖα.
+    </td>
+    <td> 
+        even as every pain also is an evil, yet not all are always of a nature to be avoided.
+    </td>
+</tr>
+<tr>
+    <td>
+        [130] τῇ μέντοι συμμετρήσει καὶ συμφερόντων καὶ ἀσυμφόρων βλέψει ταῦτα πάντα κρίνειν καθήκει.
+    </td>
+    <td> 
+        [130] Yet by a scale of comparison and by the consideration of advantages and disadvantages we must form our judgement on all these matters.
+    </td>
+</tr>
+<tr>
+    <td>
+        χρώμεθα γὰρ τῷ μὲν ἀγαθῷ κατά τινας χρόνους ὡς κακῷ, τῷ δὲ κακῷ τοὔμπαλιν ὡς ἀγαθῷ.
+    </td>
+    <td> 
+        For the good on certain occasions we treat as bad, and conversely the bad as good.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ τὴν αὖτάρκειαν δὲ ἀγαθὸν μέγα νομίζομεν, οὐχ ἵνα πάντως τοῖς ὀλίγοις χρώμεθα, ἀλλ᾽ ὅπως ἐὰν μὴ ἔχωμεν τὰ πολλά, τοῖς ὀλίγοις χρώμεθα, πεπεισμένοι γνησίως ὅτι ἥδιστα πολυτελείας ἀπολαύουσιν οἱ ἥκιστα ταύτης δεόμενοι, καὶ ὅτι τὸ μὲν φυσικὸν πᾶν εὐπόριστόν ἐστι, τὸ δὲ κενὸν δυσπόριστον.
+    </td>
+    <td> 
+        And again independence of desire we think a great good—not that we may at all times enjoy but a few things, but that, if we do not possess many, we may enjoy the few in the genuine persuasion that those have the sweetest pleasure in luxury who least need it, and that all that is natural is easy to be obtained, but that which is superfluous is hard.
+    </td>
+</tr>
+<tr>
+    <td>
+        οἱ τε λιτοὶ χυλοὶ ἴσην πολυτελεῖ διαίτῃ τὴν ἡδονὴν ἐπιφέρουσιν, ὅταν ἅπαν τὸ ἀλγοῦν κατ᾽ ἔνδειαν ἐξαιρεθῇ·
+    </td>
+    <td> 
+        And so plain savours bring us a pleasure equal to a luxurious diet, when all the pain due to want is removed;
+    </td>
+</tr>
+<tr>
+    <td>
+        [131] καὶ μαζα καὶ ὕδωρ τὴν ἀκροτάτην ἀποδίδωσιν ἡδονήν, ἐπειδὰν ἐνδέων τις αὐτὰ προσενέγκηται.
+    </td>
+    <td> 
+        [131] and bread and water produce the highest pleasure, when one who needs them puts them to his lips.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ συνεθίζειν οὖν ἐν ταῖς ἁπλαῖς καὶ οὐ πολυτελέσι διαίταις καὶ ὑγιείας ἐστὶ συμπληρωτικὸν καὶ πρὸς τὰς ἀναγκαίας τοῦ βίου χρήσεις ἄοκνον ποιεῖ τὸν ἄνθρωπον καὶ τοῖς πολυτελέσιν ἐκ διαλειμμάτων προσερχομένους κρεῖττον ἡμᾶς διατίθησι καὶ πρὸς τὴν τύχην ἀφόβους παρασκευάζει.
+    </td>
+    <td> 
+        To grow accustomed therefore to simple and not luxurious diet gives us health to the full, and makes a man alert for the needful employments of life, and when after long intervals we approach luxuries disposes us better towards them, and fits us to be fearless of fortune.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ὅταν οὖν λέγωμεν ἡδονὴν τέλος ὑπάρχειν, οὐ τὰς τῶν ἀσώτων ἡδονὰς καὶ τὰς ἐν ἀπολαύσει κειμένας λέγομεν, ὥς τινες ἀγνοοῦντες καὶ οὐχ ὁμολογοῦντες ἢ κακῶς ἐκδεχόμενοι νομίζουσιν, ἀλλὰ τὸ μήτε ἀλγεῖν κατὰ σῶμα μήτε ταράττεσθαι κατὰ ψυχήν·
+    </td>
+    <td> 
+        When, therefore, we maintain that pleasure is the end, we do not mean the pleasures of profligates and those that consist in sensuality, as is supposed by some who are either ignorant or disagree with us or do not understand, but freedom from pain in the body and from trouble in the mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        [132] οὐ γὰρ πότοι καὶ κῶμοι συνείροντες οὐδ᾽ ἀπολαύσεις παίδων καὶ γυναικῶν οὐδ᾽ ἰχθύων καὶ τῶν ἄλλων, ὅσα φέρει πολυτελὴς τράπεζα, τὸν ἡδὺν γεννᾷ βίον, ἀλλὰ νήφων λογισμὸς καὶ τὰς αἰτίας ἐξερευνῶν πάσης αἱρέσεως καὶ φυγῆς καὶ τὰς δόξας ἐξελαύνων, ἐξ ὧν πλεῖστος τὰς ψυχὰς καταλαμβάνει θόρυβος.
+    </td>
+    <td> 
+        [132] For it is not continuous drinkings and revellings, nor the satisfaction of lusts, nor the enjoyment of fish and other luxuries of the wealthy table, which produce a pleasant life, but sober reasoning, searching out the motives for all choice and avoidance, and banishing mere opinions, to which are due the greatest disturbance of the spirit.
+    </td>
+</tr>
+<tr>
+    <td>
+        Τούτων δὲ πάντων ἀρχὴ καὶ τὸ μέγιστον ἀγαθὸν φρόνησις.
+    </td>
+    <td> 
+        Of all this the beginning and the greatest good is prudence.
+    </td>
+</tr>
+<tr>
+    <td>
+        διὸ καὶ φιλοσοφίας τιμιώτερον ὑπάρχει φρόνησις, ἐξ ἧς αἱ λοιπαὶ πᾶσαι πεφύκασιν ἀρεταί, διδάσκουσα ὡς οὐκ ἔστιν ἡδέως ζῆν ἄνευ τοῦ φρονίμως καὶ καλῶς καὶ δικαίως &lt;οὐδὲ φρονίμως καὶ καλῶς καὶ δικαίως&gt; ἄνευ τοῦ ἡδέως.
+    </td>
+    <td> 
+        Wherefore prudence is a more precious thing even than philosophy: for from prudence are sprung all the other virtues, and it teaches us that it is not possible to live pleasantly without living prudently and honourably and justly, &lt;nor, again, to live a life of prudence, honour, and justice&gt; without living pleasantly.
+    </td>
+</tr>
+<tr>
+    <td>
+        συμπεφύκασι γὰρ αἱ ἀρεταὶ τῷ ζῆν ἡδέως, καὶ τὸ ζῆν ἡδέως τούτων ἐστὶν ἀχώριστον.
+    </td>
+    <td> 
+        For the virtues are by nature bound up with the pleasant life, and the pleasant life is inseparable from them.
+    </td>
+</tr>
+<tr>
+    <td>
+        [133] ἐπεὶ τίνα νομίζεις εἶναι κρείττονα τοῦ καὶ περὶ θεῶν ὅσια δοξάζοντος καὶ περὶ θανάτου διὰ παντὸς ἀφόβως ἔχοντος καὶ τὸ τῆς φύσεως ἐπιλελογισμένου τέλος, καὶ τὸ μὲν τῶν ἀγαθῶν πέρας ὡς ἔστιν εὐσυμπλήρωτόν τε καὶ εὐπόριστον διαλαμβάνοντος, τὸ δὲ τῶν κακῶν ὡς ἢ χρόνους ἢ πόνους ἔχει βραχεῖς, τὴν δὲ ὑπό τινων δεσπότιν εἰσαγομένην πάντων διαγελῶντος &lt;εἱμαρμένην; * * * * * ὧν ἃ μὲν κατ᾽ ἀνάγκην γίνεται&gt;, ἃ δὲ ἀπὸ τύχης, ἃ δὲ παρ᾽ ἡμᾶς διὰ τὸ τὴν μὲν ἀνάγκην ἀνυπεύθυνον εἶναι, τὴν δὲ τύχην ἄστατον ὁρᾶν, τὸ δὲ παρ᾽ ἡμᾶς ἀδέσποτον, ᾧ καὶ τὸ μεμπτὸν καὶ τὸ ἐναντίον παρακολουθεῖν πέφυκεν
+    </td>
+    <td> 
+        [133] For indeed who, think you, is a better man than he who holds reverent opinions concerning the gods, and is at all times free from fear of death, and has reasoned out the end ordained by nature? He understands that the limit of good things is easy to fulfil and easy to attain, whereas the course of ills is either short in time or slight in pain: he laughs at &lt;destiny&gt;, whom some have introduced as the mistress of all things. &lt;He thinks that with us lies the chief power in determining events, some of which happen by necessity&gt; and some by chance, and some are within our control; for while necessity cannot be called to account, he sees that chance is inconstant, but that which is in our control is subject to no master, and to it are naturally attached praise and blame.
+    </td>
+</tr>
+<tr>
+    <td>
+        [134] (ἐπεὶ κρεῖττον ἦν τῷ περὶ θεῶν μύθῳ κατακολουθεῖν ἢ τῇ τῶν φυσικῶν εἱμαρμένῃ δουλεύειν·
+    </td>
+    <td> 
+        [134] For, indeed, it were better to follow the myths about the gods than to become a slave to the destiny of the natural philosophers:
+    </td>
+</tr>
+<tr>
+    <td>
+        ὃ μὲν γὰρ ἐλπίδα παραιτήσεως ὑπογράφει θεῶν διὰ τιμῆς, ἣ δὲ ἀπαραίτητον ἔχει τὴν ἀνάγκην)· 
+    </td>
+    <td> 
+        for the former suggests a hope of placating the gods by worship, whereas the latter involves a necessity which knows no placation.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὴν δὲ τύχην οὔτε θεόν, ὡς οἱ πολλοὶ νομίζουσιν, ὑπολαμβάνων (οὐθὲν γὰρ ἀτάκτως θεῷ πράττεται) οὔτε &lt;πάντων&gt; ἀβέβαιον αἰτίαν (&lt;οὐκ&gt; οἴεται μὲν γὰρ ἀγαθὸν ἢ κακὸν ἐκ ταύτης πρὸς τὸ μακαρίως ζῆν ἀνθρώποις δίδοσθαι, ἀρχὰς μέντοι μεγάλων ἀγαθῶν ἢ κακῶν ὑπὸ ταύτης χορηγεῖσθαι),
+    </td>
+    <td> 
+        As to chance, he does not regard it as a god as most men do (for in a god’s acts there is no disorder), nor as an uncertain cause &lt;of all things&gt; for he does not believe that good and evil are given by chance to man for the framing of a blessed life, but that opportunities for great good and great evil are afforded by it.
+    </td>
+</tr>
+<tr>
+    <td>
+        [135] κρεῖττον εἶναι νομίζει εὐλογίστως ἀτυχεῖν ἢ ἀλογίστως εὐτυχεῖν (βέλτιστον γὰρ ἐν ταῖς πράξεσι τὸ καλῶς κριθὲν &lt;σφαλῆναι μᾶλλον ἢ τὸ κακῶς κριθὲν&gt; ὀρθωθῆναι διὰ ταύτην).
+    </td>
+    <td> 
+        [135] He therefore thinks it better to be unforunfortunate in reasonable action than to prosper in unreason. For it is better in a man’s actions that what is well chosen &lt;should fail, rather than that what is ill chosen&gt; should be successful owing to chance.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
+    </td>
+    <td> 
+        Meditate therefore on these things and things akin to them night and day by yourself; and with a companion like to yourself, and never shall you be disturbed waking or asleep, but you shall live like a god among men.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀγαθοῖς.
+    </td>
+    <td> 
+        For a man who lives among immortal blessings is not like to a mortal being.
     </td>
 </tr>
 
