--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -130,7 +130,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 [130] τῇ μέντοι συμμετρήσει καὶ συμφερόντων καὶ ἀσυμφόρων βλέψει ταῦτα πάντα κρίνειν καθήκει.
 
-χρώμεθα γὰρ τῷ μὲν ἀγαθῷ κατά τινας χρόνους ὡς κακῷ, τῷ δὲ κακῷ. τἄμπαλιν ὡς ἀγαθῷ.
+χρώμεθα γὰρ τῷ μὲν ἀγαθῷ κατά τινας χρόνους ὡς κακῷ, τῷ δὲ κακῷ τἄμπαλιν ὡς ἀγαθῷ.
 
 Καὶ τὴν αὖτάρκειαν δὲ ἀγαθὸν μέγα νομίζομεν, οὐχ ἵνα πάντως τοῖς ὀλίγοις χρώμεθα, ἀλλ᾽ ὅπως ἐὰν μὴ ἔχωμεν τὰ πολλά, τοῖς ὀλίγοις ἀρκώμεθα, πεπεισμένοι γνησίως ὅτι ἥδιστα πολυτελείας ἀπολαύουσιν οἱ ἥκιστα ταύτης δεόμενοι, καὶ ὅτι τὸ μὲν φυσικὸν πᾶν εὐπόριστόν ἐστι, τὸ δὲ κενὸν δυσπόριστον.
 
@@ -161,7 +161,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <p class="indent">
 Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
 
-οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀταθοῖς.
+οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀγαθοῖς.
 </p>
 <br>
 <br>
