--- a/Letter_to_Herodotus_Usener.html
+++ b/Letter_to_Herodotus_Usener.html
@@ -12,11 +12,11 @@
   <h1>Epicurus's "Letter to Herodotus"</h1>
 
   <h3>Source</h3>
-The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (https://archive.org/details/HermannUsenerEpicurea1887/page/n81/mode/2up). My only contribution was to proofread, insert the paragraph numbers, and concatenate the hyphenated words. I have used Usener's paragraph breaks.
+<p>The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up). My only contribution was to proofread, insert the paragraph numbers, and concatenate the hyphenated words. I have used Usener's paragraph breaks. Ultimately, the text derives from Diogenes Laertius's "Lives of the Eminent Philosophers" (third century AD) which has been preserved in a hundred or so medieval and early modern manuscripts. Laertius was likely quoting from another manuscript when he copied down the three letters from Epicurus and the Principal Doctrines, but that manuscript is now lost.</p>
 
 <h3>Key</h3>
 <ul>
-<li> [xx] - Represents the section numbers either from one of the original manuscripts of Diogenes Laertius's "Lives of the Eminent Philosophers," from which this text ultimately derives, or added by Usener, I do not know.</li>
+<li> [xx] - Represents the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers," from which this text ultimately derives.</li>
   <li>&lt;text&gt; - Represents text added by Usener.</li>
   <li> * * - Represents text that is unreadable or missing in the manuscripts</li>
   <li>(text) - Represents text that Usener thinks has been added by later commentators</li>
