--- a/Critique of Pure Reason/Introduction - IV.html
+++ b/Critique of Pure Reason/Introduction - IV.html
@@ -68,6 +68,7 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
         <a id="Footnote 1">[1]</a>That is, judgments which really add to, and do not merely analyse or explain the conceptions which make up the sum of our knowledge.—Tr.
     </td>
 </tr>
+</table>
 
 <h1>Commentary</h1>
 
