--- a/Critique of Pure Reason/Introduction - V.html
+++ b/Critique of Pure Reason/Introduction - V.html
@@ -91,7 +91,7 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 <h3>Summary</h3>
 
-<p>Kant argues that certain arithmetical, geometrical, and physical propositions are synthetic a priori, i.e. they are independent of experience, but they are not true by definition.</p>
+<p>Kant argues that arithmetical, geometrical, and physical propositions (e.g., the laws of physics) are synthetic a priori, i.e., they are independent of experience, but they are not true by definition.</p>
 
 <h3>Discussion</h3>
 
