--- a/Critique of Pure Reason/Template.html
+++ b/Critique of Pure Reason/Template.html
@@ -53,6 +53,7 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
         <a id="Footnote 1">[1]</a>
     </td>
 </tr>
+</table>
 
 <h1>Commentary</h1>
 
