--- a/Letter_to_Menoeceus_Bailey_Bilingual (master).html
+++ b/Letter_to_Menoeceus_Bailey_Bilingual (master).html
@@ -34,7 +34,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς το κατὰ ψυχὴν ὑγιαῖνον.
+        οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς τὸ κατὰ ψυχὴν ὑγιαῖνον.
     </td>
     <td> 
         For no one can come too early or too late to secure the health of his soul.
