--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -28,7 +28,7 @@
 <p class="indent">
 [122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
 
-οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς το κατὰ ψυχὴν ὑγιαῖνον.
+οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς τὸ κατὰ ψυχὴν ὑγιαῖνον.
 
 ὁ δὲ λέγων μήπω τοῦ φιλοσοφεῖν ὑπάρχειν ἢ παρεληλυθέναι τὴν ὥραν ὅμοιός ἐστι τῷ λέγοντι πρὸς εὐδαιμονίαν ἢ μήπω παρεῖναι τὴν ὥραν ἢ μηκέτ᾽ εἶναι.
 
