Up to accented alphas

--- a/Critique of Pure Reason/Introduction - VII.html
+++ b/Critique of Pure Reason/Introduction - VII.html
@@ -91,7 +91,7 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 <h3>Summary</h3>
 
-<p></p>
+<p>Kant claims that his Critique of Pure Reason will serve as a sort of sketch of a future Organon of Pure Reason, which lays out the grounds and presents arguments for why the domain is limited in these ways. He introduces the central division in the Critique, between the "Doctrine of Elements," which discusses the use of pure reason with respect to our sensation of objects, and the "Doctrine of Method," which discusses the use of pure reason with respect to thought itself. (In fact, most of the Critique is taken up with the "Doctrine of Elements," and the "Doctrine of Method," feels like a bit of an afterthought or epilogue.)</p>
 
 <h3>Discussion</h3>
 
