Finished words for Menoeceus

--- a/Critique of Pure Reason/Transcendental Aesthetic - 1.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 1.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Book 1 Part 1, the Transcendental Aesthetic - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
+<title>Kant's Critique of Pure Reason - Transcendental Aethetic, §1. Introductory - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Book 1 Part 1, the Transcendental Aesthetic - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason - Transcendental Aethetic, §1. Introductory - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
 
 <h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)).
+The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn))/Volume_1/Part_1#b1.
 <br>
 <br>
 
