--- a/Critique of Pure Reason/Transcendental Aesthetic - 5.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 5.html
@@ -63,7 +63,9 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 <h3>Discussion</h3>
 
-<p></p>
+<p>Here we begin to see the origins of one of the well-known tensions in Kant's critique, namely the question of whether Kant is truly agnostic about the nature of things-in-themselves. He clearly asserts more than he should, if it were true that we were supposed to be agnostic about things-in-themselves. For example, denying the absolute reality of time to noumena, and implying (at least) that change to is absent from the realm of the noumena. Scholars have wasted vast quantities of ink trying to explain Kant's apparent contradiction here, naively believing him to be an ingenuous exhibitor of a novel epistemology. "He just oversteps himself in his excitement when he says that time is absent from the noumenal realm. Strictly speaking, he should say that time may be in the noumenal realm, or it may not be, but he is trying too hard to make his point that, in the phenomenal realm, time is nothing but the form of internal intuitions." I would suggest, on the contrary, that the entire purpose of Kant's system is to deny time and change in the noumenal realm. That was the end, and the means (the "discovery" of synthetic a priori truths and the concomitant transcendental reality of time and space) were formulated retroactively. Because the end is the retention of the supernatural, even if the world should burn because of it. And the establishment of ourselves as noumena, existing outside space and time, accomplishes this purpose.</p>
+
+<p>Every experience depends upon time, because experiences just are changes in our own mental state. But this is just a physical fact about the human brain. It does not imply at all that time *only* exists in our minds. </p>
 
 </body>
 </html>
