--- a/Letter_to_Menoeceus_Bailey_Bilingual (master).html
+++ b/Letter_to_Menoeceus_Bailey_Bilingual (master).html
@@ -226,7 +226,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ᾿Αλλ᾽ οἱ πολλοὶ τὸν θάνατον ὁτὲ μὲν ὡς μέγιστον τῶν κακῶν φεύγουσιν, ὁτὲ δὲ ὡς ἀνάπαυσιν τῶν ἐν τῷ ζῆν &lt;κακῶν ποθοῦσιν.
+        Ἀλλ᾽ οἱ πολλοὶ τὸν θάνατον ὁτὲ μὲν ὡς μέγιστον τῶν κακῶν φεύγουσιν, ὁτὲ δὲ ὡς ἀνάπαυσιν τῶν ἐν τῷ ζῆν &lt;κακῶν ποθοῦσιν.
     </td>
     <td> 
         But the many at one moment shun death as the greatest of evils, at another (yearn for it) as a respite from the &lt;evils&gt; in life.
@@ -250,7 +250,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ὥσπερ δὲ σιτίον οὐ τὸ πλεῖον πάντως ἀλλὰ τὸ ἥδιστον αἱρεῖται, οὕτω καὶ χρόνον οὐ τὸν μήκιστον ἀλλὰ τὸν ἤδιστον καρπίζεται.
+        ὥσπερ δὲ σιτίον οὐ τὸ πλεῖον πάντως ἀλλὰ τὸ ἥδιστον αἱρεῖται, οὕτω καὶ χρόνον οὐ τὸν μήκιστον ἀλλὰ τὸν ἥδιστον καρπίζεται.
     </td>
     <td> 
         And just as with food he does not seek simply the larger share and nothing else, but rather the most pleasant, so he seeks to enjoy not the longest period of time, but the most pleasant.
@@ -274,7 +274,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        φύντα δ᾽ ὅπως ὤκιστα πύλας ᾿Αίδαο περῆσαι.
+        φύντα δ᾽ ὅπως ὤκιστα πύλας Ἀίδαο περῆσαι.
     </td>
     <td> 
         'once born make haste to pass the gates of Death'.
