--- a/Critique of Pure Reason/Introduction - VII.html
+++ b/Critique of Pure Reason/Introduction - VII.html
@@ -11,7 +11,7 @@
 <h1>Kant's Critique of Pure Reason - Introduction VII. - Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
 
 <h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/#a7).
+The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction#a7).
 <br>
 <br>
 
@@ -71,27 +71,11 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 </table>
 
-<h3>Footnotes</h3>
-<table>
-<tr>
-<th>German text</th>
-<th>English text</th>
-</tr>
-<tr>
-    <td>
-        <a id="Footnote 1">[1]</a>
-    </td>
-    <td> 
-        <a id="Footnote 1">[1]</a>
-    </td>
-</tr>
-</table>
-
 <h1>Commentary</h1>
 
 <h3>Summary</h3>
 
-<p>Kant claims that his Critique of Pure Reason will serve as a sort of sketch of a future Organon of Pure Reason, which lays out the grounds and presents arguments for why the domain is limited in these ways. He introduces the central division in the Critique, between the "Doctrine of Elements," which discusses the use of pure reason with respect to our sensation of objects, and the "Doctrine of Method," which discusses the use of pure reason with respect to thought itself. (In fact, most of the Critique is taken up with the "Doctrine of Elements," and the "Doctrine of Method," feels like a bit of an afterthought or epilogue.)</p>
+<p>Kant claims that his Critique of Pure Reason will serve as a sort of sketch of a future Organon of Pure Reason, which lays out the grounds and presents arguments for why the domain is limited in these ways. He introduces the central division in the Critique, between the "Doctrine of Elements," which discusses the use of pure reason with respect to our sensation of objects, and the "Doctrine of Method," which discusses the use of pure reason with respect to thought itself. (In fact, most of the Critique is taken up with the "Doctrine of Elements." The "Doctrine of Method" feels like a bit of an afterthought or epilogue.)</p>
 
 <h3>Discussion</h3>
 
