--- a/Letter_to_Menoeceus_Usener.html
+++ b/Letter_to_Menoeceus_Usener.html
@@ -78,20 +78,20 @@
 
 οὔτε οὖν πρὸς τοὺς ζῶντας ἐστὶν οὔτε πρὸς τοὺς τετελευτηκότας, ἐπειδή περ περὶ οὕς μὲν οὐκ ἔστιν, οἳ δ᾽ οὐκέτι εἰσίν.
 
-᾿Αλλ᾽ οἱ πολλοὶ τὸν θάνατον ὁτὲ μὲν ὡς μέγιστον τῶν κακῶν φεύγουσιν, ὁτὲ δὲ ὡς ἀνάπαυσιν τῶν ἐν τῷ ζῆν &lt;κακῶν αἱροῦνται.
+Ἀλλ᾽ οἱ πολλοὶ τὸν θάνατον ὁτὲ μὲν ὡς μέγιστον τῶν κακῶν φεύγουσιν, ὁτὲ δὲ ὡς ἀνάπαυσιν τῶν ἐν τῷ ζῆν &lt;κακῶν αἱροῦνται.
 
 [126] ὁ δὲ σοφὸς οὔτε παραιτεῖται τὸ ζῆν&gt; οὔτε φοβεῖται τὸ μὴ ζῆν·
 
 οὔτε γὰρ αὐτῷ προσίσταται τὸ ζῆν οὔτε δοξάζεται κακὸν εἶναί τι τὸ μὴ ζῆν.
 
-ὥσπερ δὲ σιτίον οὐ τὸ πλεῖον πάντως ἀλλὰ τὸ ἥδιον αἱρεῖται, οὕτω καὶ χρόνον οὐ τὸν μήκιστον ἀλλὰ τὸν ἤδιστον καρπίζεται.
+ὥσπερ δὲ σιτίον οὐ τὸ πλεῖον πάντως ἀλλὰ τὸ ἥδιον αἱρεῖται, οὕτω καὶ χρόνον οὐ τὸν μήκιστον ἀλλὰ τὸν ἥδιστον καρπίζεται.
 
 Ὁ δὲ παραγγέλλων τὸν μὲν νέον καλῶς ζῆν, τὸν δὲ γέροντα καλῶς καταστρέφειν εὐήθης ἐστὶν οὐ μόνον διὰ τὸ τῆς ζωῆς ἀσπαστόν, ἀλλὰ καὶ διὰ τὸ τὴν αὐτὴν εἶναι μελέτην τοῦ καλῶς ζῆν καὶ τοῦ καλῶς ἀποθνῄσκειν.
 
 πολὺ δὲ χεῖρον καὶ ὁ λέγων καλὸν μὲν μὴ φῦναι,
 </p>
 <p class="indent">
-φύντα δ᾽ ὅπως ὤκιστα πύλας ᾿Αίδαο περῆσαι.
+φύντα δ᾽ ὅπως ὤκιστα πύλας Ἀίδαο περῆσαι.
 
 [127] εἰ μὲν γὰρ πεποιθὼς τοῦτό φησι, πῶς οὐκ ἀπέρχεται τοῦ ζῆν;
 
