--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Epicurean Herald</title>
+<title>ericlyonshansen.github.io</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>The Epicurean Herald Main Page</h1>
+<h1>Home Page</h1>
 <h2>Texts</h2>
 <ol>
   <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by Hermann Usener (1887)</a> </li>
