Format changes for Epicurus docs

--- a/Epicurus/Letter_to_Herodotus_Bailey_Lines (master).html
+++ b/Epicurus/Letter_to_Herodotus_Bailey_Lines (master).html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Epicurus's "Letter to Herodotus" - Bailey Edition - Greek and English Text - Line-by-Line Version</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -1486,6 +1486,6 @@
 The Greek and English texts are both from from "Epicurus: The Extant Remains" (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up">here</a>), and proofed by myself. 
 <br>
 <br>
-<a href="https://ericlyonshansen.github.io/index.html">Back to the main page.
+<a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
 </body>
 </html>
