--- a/Epicurus/Letter_to_Menoeceus_Bailey_Lines.html
+++ b/Epicurus/Letter_to_Menoeceus_Bailey_Lines.html
@@ -3,15 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Epicurus's "Letter to Menoeceus" - Cyril Bailey - Greek and English Text - Translator's Version</title>
-<link rel="stylesheet" href="style.css">
+<title>Epicurus's "Letter to Menoeceus" - Bailey Edition - Greek and English Text - Line-by-Line Version</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Epicurus's "Letter to Menoeceus" - Cyril Bailey - Greek and English text - Translator's Version</h1>
+<h1>Epicurus's "Letter to Menoeceus" - Bailey Edition - Greek and English text - Line-by-Line Version</h1>
 
-<h3>Source</h3>
-The Greek and English texts are both from from "Epicurus: The Extant Remains" (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up), and proofed by myself. 
+<h4>Key</h4>
+<ul>
+<li> [xx] - Represents the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
+  <li>&lt;text&gt; - Represents text added by Bailey.</li>
+  <li> * * - Represents text that is unreadable or missing in the manuscripts</li>
+  <li>(text) - Represents text that Bailey thinks has been added by later commentators</li>
+  <li> · - An ano teleia mark, which functions like a semicolon.</li>
+</ul>
+
+(Mouseover a Greek word to see the English translation.)
+
 <br>
 <br>
 
@@ -494,7 +503,11 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
         For a man who lives among immortal blessings is not like to a mortal being.
     </td>
 </tr>
-
 </table>
+<h4>Source</h4>
+The Greek and English texts are both from from "Epicurus: The Extant Remains" (1926), compiled and translated by Cyril Bailey. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/EpicurusTheExtantRemainsBaileyOxford1926_201309/page/19/mode/2up">here</a>), and proofed by myself. 
+<br>
+<br>
+<a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
 </body>
 </html> 
