--- a/Epicurus/Letter_to_Menoeceus_Usener (master).html
+++ b/Epicurus/Letter_to_Menoeceus_Usener (master).html
@@ -4,12 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Epicurus's "Letter to Menoeceus" - Usener Edition</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-
-  <h1>Epicurus's "Letter to Menoeceus" - Usener Edition</h1>
+<h1>Epicurus's "Letter to Menoeceus" - Usener Edition</h1>
 
 <h4>Key</h4>
 <ul>
@@ -27,8 +26,7 @@
 
 ΕΠΙΚΟΥΡΟΣ ΜΕΝΟΙΚΕΙ ΧΑΙΡΕΙΝ
 <br>
-<p class="indent">
-[122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
+<p class="indent"> [122] Μήτε νέος τις ὢν μελλέτω φιλοσοφεῖν, μήτε γέρων ὑπάρχων κοπιάτω φιλοσόφων.
 
 οὔτε γὰρ ἄωρος οὐδείς ἐστίν οὔτε πάρωρος πρὸς τὸ κατὰ ψυχὴν ὑγιαῖνον.
 
@@ -36,10 +34,8 @@
 
 ὥστε φιλοσοφητέον καὶ νέῳ καὶ γέροντι, τῷ μὲν ὅπως γηράσκων νεάζῃ τοῖς ἀγαθοῖς διὰ τὴν χάριν τῶν γεγονότων, τῷ δὲ ὅπως νέος ἅμα καὶ παλαιὸς ᾖ διὰ τὴν ἀφοβίαν τῶν μελλόντων.
 
-μελετᾶν οὖν χρὴ τὰ ποιοῦντα τὴν εὐδαιμονίαν, εἴ περ παρούσης μὲν αὐτῆς πάντα ἔχομεν, ἀπούσης δὲ πάντα πράττομεν εἰς τὸ ταύτην ἔχειν.
-</p>
-<p class="indent">
-[123] Ἃ δέ σοι συνεχῶς παρήγγελλον, ταῦτα καὶ πρᾶττε καὶ μελέτα, στοιχεῖα τοῦ καλῶς ζῆν ταῦτ᾽ εἶναι διαλαμβάνων·
+μελετᾶν οὖν χρὴ τὰ ποιοῦντα τὴν εὐδαιμονίαν, εἴ περ παρούσης μὲν αὐτῆς πάντα ἔχομεν, ἀπούσης δὲ πάντα πράττομεν εἰς τὸ ταύτην ἔχειν. </p>
+<p class="indent"> [123] Ἃ δέ σοι συνεχῶς παρήγγελλον, ταῦτα καὶ πρᾶττε καὶ μελέτα, στοιχεῖα τοῦ καλῶς ζῆν ταῦτ᾽ εἶναι διαλαμβάνων·
 
 πρῶτον μὲν τὸν θεὸν ζῷον ἄφθαρτον καὶ μακάριον νομίζων, ὡς ἡ κοινὴ τοῦ θεοῦ νόησις ὑπεγράφη, μηθὲν μήτε τῆς ἀφθαρσίας ἀλλότριον μήτε τῆς μακαριότητος ἀνοίκειον αὐτῷ πρόσαπτε·
 
@@ -57,10 +53,8 @@
 
 [124] οὐ γὰρ προλήψεις εἰσὶν ἀλλ᾽ ὑπολήψεις ψευδεῖς αἱ τῶν πολλῶν ὑπὲρ θεῶν ἀποφάσεις, ἔνθεν αἱ μέγισται βλάβαι τε τοῖς κακοῖς ἐκ θεῶν ἐπάγονται καὶ ὠφέλειαι &lt;τοῖς ἀγαθοῖς&gt;.
 
-ταῖς γὰρ ἰδίαις οἰκειούμενοι διὰ παντὸς ἀρεταῖς τοὺς ὁμοίους ἀποδέχονται, πᾶν τὸ μὴ τοιοῦτον ὡς ἀλλότριον νομίζοντες.
-</p>
-<p class="indent">
-Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἡμᾶς εἶναι τὸν θάνατον·
+ταῖς γὰρ ἰδίαις οἰκειούμενοι διὰ παντὸς ἀρεταῖς τοὺς ὁμοίους ἀποδέχονται, πᾶν τὸ μὴ τοιοῦτον ὡς ἀλλότριον νομίζοντες. </p>
+<p class="indent"> Συνέθιζε δὲ ἐν τῷ νομίζειν μηδὲν πρὸς ἡμᾶς εἶναι τὸν θάνατον·
 
 ἐπεὶ πᾶν ἀγαθὸν καὶ κακὸν ἐν αἰσθήσει·
 
@@ -90,10 +84,8 @@
 
 Ὁ δὲ παραγγέλλων τὸν μὲν νέον καλῶς ζῆν, τὸν δὲ γέροντα καλῶς καταστρέφειν εὐήθης ἐστὶν οὐ μόνον διὰ τὸ τῆς ζωῆς ἀσπαστόν, ἀλλὰ καὶ διὰ τὸ τὴν αὐτὴν εἶναι μελέτην τοῦ καλῶς ζῆν καὶ τοῦ καλῶς ἀποθνῄσκειν.
 
-πολὺ δὲ χεῖρον καὶ ὁ λέγων καλὸν μὲν μὴ φῦναι,
-</p>
-<p class="indent">
-φύντα δ᾽ ὅπως ὤκιστα πύλας Ἀίδαο περῆσαι.
+πολὺ δὲ χεῖρον καὶ ὁ λέγων καλὸν μὲν μὴ φῦναι, </p>
+<p class="indent"> φύντα δ᾽ ὅπως ὤκιστα πύλας Ἀίδαο περῆσαι.
 
 [127] εἰ μὲν γὰρ πεποιθὼς τοῦτό φησι, πῶς οὐκ ἀπέρχεται τοῦ ζῆν;
 
@@ -101,10 +93,8 @@
 
 εἰ δὲ μωκώμενος, μάταιος ἐν τοῖς οὐκ ἐπιδεχομένοις.
 
-Μνημονευτέον δὲ ὡς τὸ μέλλον οὔτε ἡμέτερον οὔτε πάντως οὐχ ἡμέτερον, ἵνα μήτε πάντως προσμένωμεν ὡς ἐσόμενον μήτε ἀπελπίζωμεν ὡς πάντως οὐκ ἐσόμενον.
-</p>
-<p class="indent">
-Ἀναλογιστέον δὲ ὡς τῶν ἐπιθυμιῶν αἳ μέν εἰσι φυσικαί, αἳ δὲ κεναί, καὶ τῶν φυσικῶν αἳ μὲν ἀναγκαῖαι, αἳ δὲ φυσικαὶ μόνον·
+Μνημονευτέον δὲ ὡς τὸ μέλλον οὔτε ἡμέτερον οὔτε πάντως οὐχ ἡμέτερον, ἵνα μήτε πάντως προσμένωμεν ὡς ἐσόμενον μήτε ἀπελπίζωμεν ὡς πάντως οὐκ ἐσόμενον. </p>
+<p class="indent"> Ἀναλογιστέον δὲ ὡς τῶν ἐπιθυμιῶν αἳ μέν εἰσι φυσικαί, αἳ δὲ κεναί, καὶ τῶν φυσικῶν αἳ μὲν ἀναγκαῖαι, αἳ δὲ φυσικαὶ μόνον·
 
 τῶν δ᾽ ἀναγκαίων αἳ μὲν πρὸς εὐδαιμονίαν εἰσὶν ἀναγκαῖαι, αἳ δὲ πρὸς τὴν τοῦ σώματος ἀοχλησίαν, αἳ δὲ πρὸς αὐτὸ τὸ ζῆν.
 
@@ -158,22 +148,17 @@
 
 ὃ μὲν γὰρ ἐλπίδα παραιτήσεως ὑπογράφει θεῶν διὰ τιμῆς, ἣ δὲ ἀπαραίτητον ἔχει τὴν ἀνάγκην), τὴν δὲ τύχην οὔτε θεόν, ὡς οἱ πολλοὶ νομίζουσιν, ὑπολαμβάνοντος (οὐθὲν γὰρ ἀτάκτως θεῷ πράττεται) οὔτε ἀβέβαιον αἰτίαν (&lt;οὐκ&gt; οἴεται μὲν γὰρ ἀγαθὸν ἢ κακὸν ἐκ ταύτης πρὸς τὸ μακαρίως ζῆν ἀνθρώποις δίδοσθαι, ἀρχὰς μέντοι μεγάλων ἀγαθῶν ἢ κακῶν ὑπὸ ταύτης χορηγεῖσθαι),
 
-[135]  κρεῖττον εἶναι νομίζοντος εὐλογίστως ἀτυχεῖν ἢ ἀλογίστως εὐτυχεῖν (βέλτιστον γὰρ ἐν ταῖς πράξεσι τὸ καλῶς κριθὲν ὀρθωθῆναι διὰ ταύτην). 
-</p>
-<p class="indent">
-Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
+[135]  κρεῖττον εἶναι νομίζοντος εὐλογίστως ἀτυχεῖν ἢ ἀλογίστως εὐτυχεῖν (βέλτιστον γὰρ ἐν ταῖς πράξεσι τὸ καλῶς κριθὲν ὀρθωθῆναι διὰ ταύτην). </p>
+<p class="indent"> Ταῦτα οὖν καὶ τὰ τούτοις συγγενῆ μελέτα πρὸς σεαὐτὸν ἡμέρας καὶ νυκτὸς πρός &lt;τε&gt; τὸν ὅμοιον σεαυτῷ, καὶ οὐδέποτε οὔθ᾽ ὕπαρ οὔτ᾽ ὄναρ διαταραχθήσῃ, ζήσεις δὲ ὡς θεὸς ἐν ἀνθρώποις.
 
-οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀγαθοῖς.
-</p>
+οὐθὲν γὰρ ἔοικε θνητῷ ζῴῳ ζῶν ἄνθρωπος ἐν ἀθανάτοις ἀγαθοῖς. </p>
 <br>
 <br>
 __________________________________________________<br>
-Please notify the webmaster of any typographical errors, i.e., in reproducing Usener's text, not in Usener's text itself.
+<h4>Source</h4>
+The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. 
 <br>
-<a href="https://epicureanherald.github.io/index.html">Back to the main page.
-
+<br>
+<a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
     </body>
   </html>
-  
-  
-  
