--- a/Epicurus/Letter_to_Pythocles_Usener (master).html
+++ b/Epicurus/Letter_to_Pythocles_Usener (master).html
@@ -3,26 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Epicurus's "Letter to Pythocles" - Greek text edited by H. Usener</title>
-<link rel="stylesheet" href="style.css">
+<title>Epicurus's "Letter to Pythocles" - Usener Edition</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
+<h1>Epicurus's "Letter to Pythocles" - Usener Edition</h1>
 
-  <h1>Epicurus's "Letter to Pythocles"</h1>
-
-  <h2>Source</h2>
-<p>The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up). My only contribution was to proofread, insert the paragraph numbers, and concatenate the hyphenated words. I have used Usener's paragraph breaks. Ultimately, the text derives from Diogenes Laertius's "Lives of the Eminent Philosophers" (third century AD) which has been preserved in a hundred or so medieval and early modern manuscripts. Laertius was likely quoting from another manuscript when he copied down the three letters from Epicurus and the Principal Doctrines, but that manuscript is now lost.</p>
-
-<h2>Key</h2>
+<h4>Key</h4>
 <ul>
-<li> [xx] - Represents the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers."</li>
-  <li>&lt;text&gt; - Represents text added by Usener.</li>
+<li> [xx] - Represents the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
+  <li>&lt;text&gt; - Represents text added by Bailey.</li>
   <li> * * - Represents text that is unreadable or missing in the manuscripts</li>
-  <li>(text) - Represents text that Usener thinks has been added by later commentators</li>
+  <li>(text) - Represents text that Bailey thinks has been added by later commentators</li>
   <li> · - An ano teleia mark, which functions like a semicolon.</li>
 </ul>
+
+(Mouseover a Greek word to see the English translation.)
+
 <br>
+<br>
+
 ΕΠΙΚΟΥΡΟΣ ΠΥΘΟΚΛΕΙ ΧΑΙΡΕΙΝ
 <br>
 <p class="indent">[84] Ἤνεγκέ μοι Κλέων ἐπιστολὴν παρὰ σοῦ, ἐν ᾗ φιλοφρονούμενός τε περὶ ἡμᾶς διετέλεις ἀξίως τῆς ἡμετέρας περὶ σεαυτὸν σπουδῆς καὶ οὐκ ἀπιθάνως ἐπειρῶ μνημονεύειν τῶν εἰς μακάριον βίον συντεινόντων διαλογισμῶν, ἐδέου τε σεαυτῷ περὶ τῶν μετεώρων σύντομον καὶ εὐπερίγραφον διαλογισμὸν ἀποστεῖλαι, ἵνα ῥᾳδίως μνημονεύῃς· τὰ γὰρ ἐν ἄλλοις ἡμῖν γεγραμμένα δυσμνημόνευτα εἶναι, καί τοι, ὡς ἔφης, συνεχῶς αὐτὰ βαστάζοντι. ἡμεις δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν. [85] γράψαντες οὖν τὰ λοιπὰ πάντα συντελοῦμεν ἅπερ ἠξίωσας πολλοῖς καὶ ἄλλοις ἐσόμενα χρήσιμα τὰ διαλογίσματα ταῦτα, καὶ μάλιστα τοῖς νεωστὶ φυσιολογίας γνησίου γευομένοις καὶ τοῖς εἰς ἀσχολίας βαθυτέρας τῶν ἐγκυκλίων τινὸς ἐμπεπλεγμένοις. καλῶς δὴ αὐτὰ διάλαβε, καὶ διὰ μνήμης ἔχων ὀξέως αὐτὰ περιόδευε μετὰ τῶν λοιπῶν ὧν ἐν τῇ μικρᾷ ἐπιτομῇ πρὸς Ἡρόδοτον ἀπεστείλαμεν. </p>
@@ -248,10 +249,11 @@
 <br>
 <br>
 __________________________________________________<br>
-Please notify the webmaster of any typographical errors, i.e., in reproducing Usener's text, not in Usener's text itself.
+<h4>Source</h4>
+The text is from Epicurea (1887), edited by Hermann Usener. It was created using optical character recognition by The Internet Archive (see <a href="https://archive.org/details/HermannUsenerEpicurea1887/page/n115/mode/2up">here</a>), and proofed by myself. 
 <br>
-<a href="https://epicureanherald.github.io/index.html">Back to the main page.
-
+<br>
+<a href="https://ericlyonshansen.github.io/Epicurus/index.html">Back to the main Epicurus page.
     </body>
   </html>
   
