--- a/Meditations on First Philosophy/First_Meditation_Veitch_Bilingual (master).html
+++ b/Meditations on First Philosophy/First_Meditation_Veitch_Bilingual (master).html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Descartes's First Meditation - Adam-Tannery & Veitch - Latin and English Text - Translator's Version</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
