--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <h1>Home Page</h1>
 <h2>Texts</h2>
 <ol>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Usener.html">Epicurus's Letter to Herodotus - Greek text edited by Hermann Usener (1887)</a> </li>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey.html">Epicurus's Letter to Herodotus - Greek and English text compiled and translated by Cyril Bailey (1926)</a> </li>
-  <li> <a href="https://epicureanherald.github.io/Letter_to_Herodotus_Bailey_Bilingual.html">Epicurus's Letter to Herodotus - Translator's version - Bailey's text line-by-line with mouseover translations</a> </li>
+  <li> <a href="https://ericlyonshansen.github.io/Epicurus/index.html">Epicurus - Greek and English Texts</a> </li>
 </ol>
 </body>
 </html>
