More style tweaks

--- a/Epicurus/Letter_to_Herodotus_Bailey_Lines (master).html
+++ b/Epicurus/Letter_to_Herodotus_Bailey_Lines (master).html
@@ -12,10 +12,11 @@
 
 <h4>Key</h4>
 <ul>
-<li> [xx] - Represents the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
-  <li>&lt;text&gt; - Represents text added by Bailey.</li>
-  <li> * * - Represents text that is unreadable or missing in the manuscripts</li>
-  <li>(text) - Represents text that Bailey thinks has been added by later commentators</li>
+<li> [xx] - the paragraph numbers orignally inserted by Marcus Meibomius in his 1692 edition of Diogenes Laertius's "Lives of the Eminent Philosophers." </li>
+  <li>&lt;text&gt; - signifies text added by Bailey or an earlier editor in order to facilitate the meaning or grammatical correctness of the passage.</li>
+  <li> * * - signifies text that is unreadable or missing in the manuscripts.</li>
+  <li>(text) - indicates text that was abbreviated in the manuscripts, but has been filled out by Bailey or an earlier editor.</li>
+  <li>†...†</li> - indicates text that is corrupt, but which Bailey doesn't know how to emend.
   <li> · - An ano teleia mark, which functions like a semicolon.</li>
 </ul>
 
