--- a/Epicurus/index.html
+++ b/Epicurus/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Epicurus's Principal Texts - Greek and English Texts</title>
+<title>Epicurus's Principal Works - Greek and English Texts</title>
 <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Epicurus's Principal Texts - Greek and English</h1>
+<h1>Epicurus's Principal Workds - Greek and English Texts</h1>
 
 <h3>Letter to Herodotus</h3>
 
