More style updates

--- a/Critique of Pure Reason/Transcendental Aesthetic - 5.html
+++ b/Critique of Pure Reason/Transcendental Aesthetic - 5.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kant's Critique of Pure Reason - Transcendental Aethetic, * - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
